possible fix for edit-box spacing on webkit

--- a/static/css/components/_events.css
+++ b/static/css/components/_events.css
@@ -340,13 +340,14 @@ align-self: stretch;
     box-sizing: border-box;
     
     max-height: 0px;
-    padding: 0px;
+
 
     display: flex;
     visibility: hidden;
     opacity: 0;
     
-
+    overflow: hidden; 
+    min-height: 0;    
 }
 
 .edit-box--in-edit-mode {
@@ -362,6 +363,8 @@ align-self: stretch;
 .edit-box--in-edit-mode * {
     opacity: 1;
     transition: opacity 0.4s ease;
+    max-height: 202px;
+    padding: 15px 20px;
 }
 
 .edit-box__cancel-box {
